--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -71,10 +71,6 @@
                     <HintPath>$(SubnauticaManaged)\UnityEngine.DSPGraphModule.dll</HintPath>
                     <Private>$(TestLibrary)</Private>
                 </Reference>
-                <Reference Include="UnityEngine.FileSystemHttpModule">
-                    <HintPath>$(SubnauticaManaged)\UnityEngine.FileSystemHttpModule.dll</HintPath>
-                    <Private>$(TestLibrary)</Private>
-                </Reference>
                 <Reference Include="UnityEngine.GameCenterModule">
                     <HintPath>$(SubnauticaManaged)\UnityEngine.GameCenterModule.dll</HintPath>
                     <Private>$(TestLibrary)</Private>
@@ -129,6 +125,10 @@
                 </Reference>
                 <Reference Include="UnityEngine.ProfilerModule">
                     <HintPath>$(SubnauticaManaged)\UnityEngine.ProfilerModule.dll</HintPath>
+                    <Private>$(TestLibrary)</Private>
+                </Reference>
+                <Reference Include="Unity.ResourceManager">
+                    <HintPath>$(SubnauticaManaged)\Unity.ResourceManager.dll</HintPath>
                     <Private>$(TestLibrary)</Private>
                 </Reference>
                 <Reference Include="UnityEngine.ScreenCaptureModule">
